# py_single_scripts

./: .gitignore  archive_folders_in_repo.py  config-reference.py  copyFromBlob.py  datahub-mlmodel-add.py  git_checkout_multiple_repos.py  outlook-calendar-acces copy.py  outlook_to_nextcloud_sync.py  pyproject.toml  requirements.txt  search_string_in_repo_files_with_hist.py  toggl_list_done_tasks.py  toggl_parse_data.py  toggl_to_anw_transfer.py  toggl_to_jira_transfer.py  util_active_env.py
helper/: config-reference.py  toggl_parse_data.py
src/py_single_scripts/: __init__.py  outlook-calendar-acces.py  toggl_to_anw_transfer.py  toggl_to_jira_transfer.py
src/py_single_scripts/helper/: toggl_parse_data.py
