[project]
name = "py-single-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vitali Prenger", email = "80702460+vitaliprenger@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.17",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "xlwings>=0.33.16",
]

[project.scripts]
py-single-scripts = "py_single_scripts:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
